@@ -1,3 +1,8 @@
+2013-06-10         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* re.c (check_bracket_exp): Remove warning about ranges being
+	locale dependent, since they aren't anymore.
+
 2013-06-09         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* io.c (iop_finish): Change fstat call to fcntl/F_GETFL per
